sidebar realign + html files fix

--- a/renderer/css/style.css
+++ b/renderer/css/style.css
@@ -140,7 +140,6 @@ body {
 .sidebar-divider {
   height: 2px;
   background-color: #505050;
-  margin: 4px 0;
 }
 
 .content {
